<resources>
    <string name="app_name">MyEduLife</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>

    <string name="country_prompt">Choose a country</string>

    <string name="menu_programme">Programme</string>
    <string name="menu_billing">Billing</string>
    <string name="menu_examination">Examination</string>
    <string name="menu_survey">Survey</string>
    <string name="menu_studentname">Name</string>
    <string name="menu_studentid">99XXX99999</string>
    <string name="menu_setting">Setting</string>
</resources>
